...
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <gestureRecognizers/>
                                        <connections>
                                            <outletCollection property="gestureRecognizers" destination="d41-uI-E7T" appends="YES" id="tEY-sO-iP4"/>
                                        </connections>
                                    </view>
                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="750" verticalCompressionResistancePriority="1000" image="DashedLine" translatesAutoresizingMaskIntoConstraints="NO" id="Z0a-7G-S5u">
                                        <rect key="frame" x="0.0" y="273" width="375" height="10"/>
                                        <accessibility key="accessibilityConfiguration" identifier="snowLine"/>
                                        <gestureRecognizers/>
                                    </imageView>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cn0-zi-DZ8">
                                        <rect key="frame" x="0.0" y="283" width="375" height="70"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <gestureRecognizers/>
...
                                        <connections>
                                            <outletCollection property="gestureRecognizers" destination="3Ib-hR-Dem" appends="YES" id="Cwi-hJ-4Ah"/>
                                        </connections>
                                    </view>
                                    <imageView contentMode="scaleToFill" horizontalHuggingPriority="1000" verticalHuggingPriority="750" verticalCompressionResistancePriority="250" image="DashedLine" translatesAutoresizingMaskIntoConstraints="NO" id="qS6-gi-v45">
                                        <rect key="frame" x="0.0" y="413" width="375" height="10"/>
                                        <accessibility key="accessibilityConfiguration" identifier="lineGround"/>
                                        <gestureRecognizers/>
                                    </imageView>
                                    <view contentMode="scaleToFill" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" translatesAutoresizingMaskIntoConstraints="NO" id="8ZF-kn-9uy">
                                        <rect key="frame" x="0.0" y="423" width="375" height="180"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A = 0.1 m" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TRe-Ku-g2u">
...
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="EvR-eo-3Zq" secondAttribute="bottom" id="SI1-4J-oNI"/>
                            <constraint firstItem="EvR-eo-3Zq" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="TY1-qW-vPw"/>
                            <constraint firstItem="EvR-eo-3Zq" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="bXh-6f-ohK"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Permafrost Predictor" id="5cX-WY-RkT">
                        <barButtonItem key="leftBarButtonItem" title="Item" image="Info" id="HtM-58-T9O">
                            <connections>
                                <action selector="infoButtonPressed:" destination="BYZ-38-t0r" id="HjA-Sz-f89"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Locations" id="VIz-AZ-XaK">
                            <connections>
                                <segue destination="2d0-7C-Xpb" kind="show" id="Wuq-wl-Vp4"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                        </label>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NE0-O4-zWp">
                                            <rect key="frame" x="305" y="0.0" width="70" height="43.5"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="70" id="3S0-KU-nwK"/>
                                            </constraints>
                                            <state key="normal" title="Load"/>
                                            <connections>
                                                <segue destination="DEd-IS-EMM" kind="unwind" identifier="LoadUI" unwindAction="unwindToUIWithSender:" id="hMK-Yq-aPy"/>
                                            </connections>
                                        </button>
                                    </subviews>
                                    <constraints>
...
