...
         //Set how deep the snow level is when the app first starts
         Hs = 2.0 //meters
         ````
    */
    required init(coder: NSCoder){        
        //default
        location = Location(name: "Fairbanks", Kvf: 1.68, Kvt: 1.48, Kmf: 1.17, Kmt: 0.55, Cmf: 1.5, Cmt: 2.1, Cvf: 1.0, Cvt: 2.0, Hs: 0.40, Hv: 0.12, Cs: 0.84, Tgs: 0, eta: 0.5, Ks: 0.27, Tair: -2.3, Aair: 18.0, ALT: 0, Tvs: 0) ?? Location()

        //screen size
        screenHeight = UIScreen.main.bounds.height 
        screenWidth = UIScreen.main.bounds.width

        //max image view heights - some of these will change later
...
        maxOrganicLayerHeight = (screenHeight * 0.15)
        
        //where the screen is split between ground and sky
        heightBasedOffPercentage = screenHeight * (0.5)
        
        //the permafrost view - where the line marking the permafrost lives
        permafrostImageView = UIImageView(image: UIImage(named: "PermafrostLine"))
        
        //Labels
        permafrostLabel = UILabel()
        groundTempLabel = UILabel()
        
        //Our inputs for our permafrost formula
...
        }
        
        //save our configuration in case nothing changes
        saveUILocation()
        
        //send the location created by the user using the UI in case the user wants to make a new one
        location.name = "Current"
        locationTableViewController.uiLocation = location
        
    }
    
    //MARK: Helper Functions
    /**
...
