...
        }
        locations += [location]
        guard let location2 = Location(name: "Utqiagvik", Kvf: 1.24, Kvt: 0.29, Kmf: 1.13, Kmt: 0.51, Cmf: 1.6, Cmt: 2.2, Cvf: 1.0, Cvt: 2.0, Hs: 0.18, Hv: 0.17, Cs: 0.84, Tgs: 0, eta: 0.71, Ks: 0.5, Tair: -11, Aair: 16, ALT: 0, Tvs: 0) else {
            fatalError("Failed to initialize default location: Utqiagvik.")
        }
        locations += [location2]
        guard let location3 = Location(name: "Nome", Kvf: 1.24, Kvt: 0.29, Kmf: 1.25, Kmt: 0.67, Cmf: 1.5, Cmt: 2.5, Cvf: 1.0, Cvt: 2.00, Hs: 0.30, Hv: 0.17, Cs: 0.84, Tgs: 0, eta: 0.35, Ks: 0.34, Tair: -2.50, Aair: 13.0, ALT: 0, Tvs: 0) else {
            fatalError("Failed to initialize default location: Nome.")
        }
        locations += [location3]
        
    }

...
